--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "emoji-mart": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
